<resources>
    <string name="app_name">AutenticacionUser</string>
    <string name="edt_mail">email</string>
    <string name="edt_password">password</string>
    <string name="btn_send">SEND</string>
    <string name="txt_Validacion">Validacion</string>
    <string name="ImageViewLogin">Login de Usuario</string>
    <string name="btn_acceder">acceder</string>
    <string name="txtRegistrarse">TextView</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro_de_usuario">Registro De Usuario</string>
    <string name="edtNombreR">Nombre</string>
    <string name="edtEmailR">email</string>
    <string name="edtPasswordR">password</string>
    <string name="repite_passwordR">Repite Password</string>
    <string name="edtTelefono">Telefono</string>
    <string name="btn_registrarR">REGISTRAR</string>
    <string name="txtVolver">Volver</string>
</resources>